<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:layout_gravity="center"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_card_item"
            android:clipToOutline="true"
            tools:src="@drawable/elephant"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                style="@style/TextContent.TitleMedium"
                android:id="@+id/tv_animal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_name" />

            <TextView
                style="@style/TextContent"
                android:id="@+id/tv_animal_habitat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/animal_habitat" />

            <TextView
                style="@style/TextContent.TitleLarge.Bold"
                android:id="@+id/tv_animal_characteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_characteristics"
                android:textColor="@color/primary"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
