<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailAnimalsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextContent.TitleMedium.Bold.Light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/detail_animal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_animal"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/rounded_card_item"
                android:clipToOutline="true"
                android:contentDescription="@string/detail_animal"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@drawable/elephant" />

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextContent.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_name"
                app:layout_constraintTop_toBottomOf="@id/iv_animal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/TextContent.TitleMedium.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_description"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_item_description"
                style="@style/TextContent.BodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_description"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tv_habitat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextContent.TitleMedium.Bold"
                android:layout_marginTop="8dp"
                android:text="@string/animal_habitat"
                app:layout_constraintTop_toBottomOf="@id/tv_item_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tv_item_habitat"
                style="@style/TextContent.BodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_habitat"
                app:layout_constraintTop_toBottomOf="@id/tv_habitat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tv_characteristics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/TextContent.TitleMedium.Bold"
                android:text="@string/animal_characteristics"
                app:layout_constraintTop_toBottomOf="@id/tv_item_habitat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tv_item_characteristics"
                style="@style/TextContent.BodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animal_characteristics"
                app:layout_constraintTop_toBottomOf="@id/tv_characteristics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/primary"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
